exported_metadata/main/default/objects/Approval_Settings_Metadata__mdt/Approval_Settings_Metadata__mdt.object-meta.xml
<CustomObject>
    <description>Stores conditional approval configuration settings for flows and lightning pages.</description>
    <label>Approval Settings Metadata</label>
    <pluralLabel>Approval Settings Metadatas</pluralLabel>
</CustomObject>