exported_metadata/main/default/objects/Approval_Settings_Metadata__mdt/fields/Approval_Type__c.field-meta.xml
<CustomField>
    <fullName>Approval_Type__c</fullName>
    <description>Specifies what kind of approval process this config is related to</description>
    <label>Approval Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HR_Approval</fullName>
                <default>true</default>
                <label>HR_Approval</label>
            </value>
            <value>
                <fullName>Finance_Review</fullName>
            </value>
            <value>
                <fullName>IT_Security</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>