exported_metadata/main/default/objects/Approval_Settings_Metadata__mdt/fields/Config_Name__c.field-meta.xml
<CustomField>
    <fullName>Config_Name__c</fullName>
    <description>Human-readable name for this approval setting</description>
    <label>Config Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>