exported_metadata/main/default/objects/Approval_Settings_Metadata__mdt/fields/Decision_Status__c.field-meta.xml
<CustomField>
    <fullName>Decision_Status__c</fullName>
    <description>Stores Accept or Deny decision from user</description>
    <label>Decision Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>