exported_metadata/main/default/objects/Approval_Settings_Metadata__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this config is currently in use</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>